--- a/package.json
+++ b/package.json
@@ -11,7 +11,27 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "next": "14.0.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@uiball/loaders": "^1.3.0",
+    "animate.css": "^4.1.1",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.7.0",
+    "jsonfile": "^6.1.0",
+    "ldrs": "^1.0.1",
+    "lottie-react": "^2.4.0",
+    "prop-types": "^15.8.1",
+    "react-icons": "^4.12.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.0",
+    "redux-persist": "^6.0.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
