new code commited

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ldrs": "^1.0.1",
     "lottie-react": "^2.4.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18",
