new code commited

--- a/src/app/.env
+++ b/src/app/.env
@@ -1,1 +1,3 @@
 MONGO_URL = "mongodb+srv://tchasingajacques:jack202050081@kick-shopping.qgo3vzq.mongodb.net/kick-shopping?retryWrites=true&w=majority"
+NEXTAUTH_URL = "https://localhost:3000/"
+NO_SECRET = "balolebwamitchasingathebest"
