--- a/src/app/.env
+++ b/src/app/.env
@@ -1,3 +1,7 @@
 MONGO_URL = "mongodb+srv://tchasingajacques:jack202050081@kick-shopping.qgo3vzq.mongodb.net/kick-shopping?retryWrites=true&w=majority"
 NEXTAUTH_URL = "https://localhost:3000/"
 SECRET = "balolebwamitchasingathebest"
+
+
+GOOGLE_CLIENT_ID = "294861944305-kdef5bgfvd4grq65jiur0c7m18tcekf3.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
